assets/css/mic-admin.css
#TB_window {
	z-index: 260001 !important;
}

#TB_overlay {
	z-index: 260000 !important;
}

.mic-editor-wrapper {
	width: 940px;
}

.mic-left-col {
	float: left;
	width: 500px;
	margin-right: 20px;
}

.mic-right-col {
	float: left;
	width: 400px;
}

.mic-48-col {
	width: 48%;
	float: right;
	margin: 20px 0px;
}

.mic-52-col {
	width: 48%;
	float: left;
	margin: 20px 0px;
}

.mic-centred {
	text-align: center;
}

#micCropImage {
	margin: auto !important;
	display: block !important;
	border-radius: 0;
}

#micLoading {
	display: none;
}

.mic-editor-wrapper h2 .nav-tab {
	font-size: 16px;
	padding: 4px;
}

#micSuccessMessage, #micFailureMessage {
	display: none;
}

#mic-2x-status {
	font-weight: bold;
	display: none;
}

#mic-2x-status:before {
	display: inline-block;
	-webkit-font-smoothing: antialiased;
	font: normal 20px/1 'dashicons';
	vertical-align: top;
	content: "\f158";
	color: #dd3d36;
	line-height: 0.8em;
}

#mic-2x-status.mic-ok:before {
	content: "\f147";
	color: #7ad03a;
}

.crop-image {
	margin-right: 10px;
}

.mic-settings-page .form-table th[scope="row"] {
	display: none;
}

.mic-editor-wrapper h4 {
	float: left;
	width: 100px;
	margin-top: 23px;
	line-height: 11px;
}

.mic-editor-wrapper .nav-tab-wrapper {
	float: left;
	width: 820px;
}

.mic-option {
	margin-top: 10px;
}

